<resources>
    <string name="app_name">Monitoring Banjir</string>
    <string name="title_activity_index">Map</string>
    <string name="no_location_access">Tidak Ada Akses Lokasi</string>
    <string name="no_get_current_location">Tidak Dapat Mengambil Lokasi Sekarang</string>
    <string name="turn_location_on">Turn On Location</string>
    <string name="no_location_found">Can\'t Get Current Location</string>

    <string name="category_normal">Aman</string>
    <string name="category_standby">Siaga</string>
    <string name="category_danger">Awas</string>

    <string name="example_debit">300.03\nLiter/Detik</string>
    <string name="empty_view">Data Kosong</string>

    <string name="default_notification_channel_id">Notification</string>
    <string name="fcm_message">Notification</string>

    <string name="developer_name_aldi">Aldi Wahyu Saragih</string>
    <string name="developer_name_hanna">Athiyyatul Farhanah</string>

    <string name="bottom_sheet_text_first">Lokasi anda berada pada status </string>
    <string name="bottom_sheet_text_last_danger"> Segera cari perlindungan</string>
    <string name="bottom_sheet_text_last_standby"> Maka berhati-hatilah!</string>
    <string name="bottom_sheet_text_last_normal"></string>
    <string name="activity_other_marker">Lokasi Perangkat</string>
    <string name="activity_about">Tentang Kami</string>
    <string name="activity_notification">Pengaturan Notifikasi</string>
    <string name="about_application_version">Kopi Senja | v 1.0</string>
    <string name="about_application_content">Aplikasi Monitoring Banjir adalah aplikasi yang dibuat khusus untuk masyarakat agar lebih mudah mendapatkan informasi bahaya banjir dan produk ini merupakan sebuah research tim kami dalam rangka tugas Proyek Akhir D3 Rekayasa Perangkat Lunak Aplikasi, Telkom University</string>
    <string name="detail_info">Detail Info</string>

    <string name="btn_intro_next">Selanjutnya</string>
    <string name="btn_intro_skip">Lewati</string>
    <string name="btn_close">Tutup</string>

    <string name="title_intro_one">Mendeteksi Area Banjir Disekitar</string>
    <string name="title_intro_two">Memberikan Notifikasi Ketika Terjadi Banjir</string>
    <string name="content_intro_one">Memberikan keadaan status banjir disekitarmu, jika tekanan air akan berada diatas batas normal</string>
    <string name="content_intro_two">Notifikasi akan diberikan ketika lokasi anda berada pada status bahaya</string>
    <string name="no_connection">Tidak ada internet</string>
    <string name="try_again">Coba Lagi</string>
    <string name="gps_off">GPS Nonaktif</string>
    <string name="turn_gps_on">Hidupkan GPS</string>
    <string name="get_notification">Notifikasi</string>

    <string name="location_far_message">Tidak ada kit disekitar anda</string>
    <string name="location_far_button_open_maps">Kit Terdekat</string>
    <string name="location_far_button_open_other">Seluruh Kit</string>

    <string name="info_notification_title">Panduan Notifikasi</string>
    <string name="info_notification_message">\nNotifikasi akan muncul saat kategori air dalam status Waspada atau Bahaya. \n\nJika ingin mendapatkan notifikasi, maka aktifkan switch pada lokasi yang diinginkan. \n\nKopi Senja | 2020</string>
</resources>
