<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.IntroActivity">

    <Button
        android:id="@+id/button_intro_left"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_left_intro"
        android:padding="24dp"
        android:text="@string/btn_intro_skip"
        android:textColor="@color/colorPaletteBlue"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_intro_right"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_intro_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_right_radius_into"
        android:padding="24dp"
        android:text="@string/btn_intro_next"
        android:textColor="@color/colorTextWhite"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ScrollView
        android:id="@+id/scrollView_intro_one"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/button_intro_right"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_intro_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            tools:layout_editor_absoluteX="31dp"
            tools:layout_editor_absoluteY="16dp">

            <ImageView
                android:id="@+id/imageView_intro_one"
                android:layout_width="wrap_content"
                android:layout_height="349dp"
                android:src="@drawable/img_intro_one"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView_intro_title_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/title_intro_one"
                android:textColor="@color/colorTextExtraDark"
                android:textSize="32sp"
                android:textStyle="bold"
                android:paddingRight="32dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView_intro_one" />

            <TextView
                android:id="@+id/textView_intro_content_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/content_intro_one"
                android:textColor="@color/colorTextExtraDark"
                android:textSize="18sp"
                android:paddingRight="32dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_intro_title_one" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <ScrollView
        android:id="@+id/scrollView_intro_two"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/button_intro_right"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_intro_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="31dp"
            tools:layout_editor_absoluteY="16dp">

            <ImageView
                android:id="@+id/imageView_intro_two"
                android:layout_width="0dp"
                android:layout_height="349dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/img_intro_two" />

            <TextView
                android:id="@+id/textView_intro_title_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/title_intro_two"
                android:textColor="@color/colorTextExtraDark"
                android:textSize="32sp"
                android:textStyle="bold"
                android:paddingRight="32dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView_intro_two" />

            <TextView
                android:id="@+id/textView_intro_content_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/content_intro_two"
                android:textColor="@color/colorTextExtraDark"
                android:textSize="18sp"
                android:paddingRight="32dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_intro_title_two" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>